--- a/main.html
+++ b/main.html
@@ -33,6 +33,7 @@
                 <ul>
                     <li>HTML</li>
                     <li>CSS</li>
+                    <li>JavaScript</li>
                   <!--  <li>JavaScript</li> -->
                 </ul>
 
@@ -112,7 +113,28 @@
                 </p>
             </div>
 
-        </section>
+            <h3 class = "headline">Final Questions</h3>
+
+            <p>Did you manage to find the the words that I've hidden on this page?</p>
+
+            <div class = "center">
+                <button id = "answer" onclick = "respondHelper(1)">Yes</button>
+                <button id = "answer" onclick = "respondHelper(2)">No</button>
+            </div>
+
+            <div class = "center">
+                <p id = "response1"></p>
+            </div>
+
+            <div class = "center" id = "question2">
+            </div>
+
+            <div class = "center">
+                <p id = "response2"></p>
+            </div>
+
+
+            <script src="main.js"></script>
         </div>
         </div>
         </div>
