--- a/welcomepage.html
+++ b/welcomepage.html
@@ -6,33 +6,20 @@
     </head>
     <body>
         <section> <!-- This is the part where I welcome people-->
-            <div class = "typewriter">
-                <div>
+            <div class = "typewriter display">
+                <div class = "display">
                 <h1>Welcome to my Portfolio Website!</h1>
             </div>
             </div>
 
-            <div>
+            <div class = display>
                 <a href = "main.html">Press Here to continue!</a>
             </div>
         </section>
+
         <div id = "background">
-            <div class = bubble></div>
-            <div class = bubble></div>
-            <div class = bubble></div>
-            <div class = bubble></div>
-            <div class = bubble></div>
-            <div class = bubble></div>
-            <div class = bubble></div>
-            <div class = bubble></div> 
-            <div class = bubble></div>
-            <div class = bubble></div>
-            <div class = bubble></div>
-            <div class = bubble></div>
-            <div class = bubble></div>
-            <div class = bubble></div>
-            <script src = "circleGenerate.js"></script>
         </div>
-        
+
+        <script src = "circleGenerate.js"></script>
     </body>
 </html>
