--- a/game.html
+++ b/game.html
@@ -9,14 +9,20 @@
 
 <body>
 
-<div>
+<div class>
     <h1 class = "headline">Without further ado, let's Play!</h1>
-    <h3 class = "headline">Let's see if you can type the following sentence within one minute</h3>
+    <h3 class = "headline">Let's see if you can type the following sentence within one minute. 
+        Press the button once you're ready!
+    </h3>
     <h3 id = "timeHolder"></h3>
 </div>
 
-<div class = "center">
-<textarea type="text" id = "underInput" placeholder="Type here!"></textarea>
+<div class = center>
+    <button id = "answer" onclick = "beginTypeify()">Begin!</button>
+</div>
+
+<div class = "center" id = "entry">
+
 </div>
 <script src="game.js"></script>
 
