--- a/game.html
+++ b/game.html
@@ -11,7 +11,7 @@
 
 <div class>
     <h1 class = "headline">Without further ado, let's Play!</h1>
-    <h3 class = "headline">Let's see if you can type the following sentence within one minute. 
+    <h3 class = "headline">Let's see how much you can type within one minute. 
         Press the button once you're ready!
     </h3>
     <h3 id = "timeHolder"></h3>
